--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^7.5.2",
+    "@astrojs/vercel": "^7.8.2",
     "astro": "^4.5.15",
     "gsap": "^3.12.5"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
